fix text-align user

--- a/public/LetsThink/chat.css
+++ b/public/LetsThink/chat.css
@@ -495,8 +495,8 @@ body {
 
 .message.user {
   justify-content: flex-end;
-  text-align: right;
 }
+
 .message.user .text-content {
   background-color: #dcdcdc;     
   padding: 12px 18px;            
